# protobuf_testing

./: Cargo.toml  build.rs  example.proto  findings.txt  test.json  test.py
lib/: hello.py
src/: main.rs
