[package]
name = "betterproto_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbjson = "0.6.0"
pbjson-types = "0.6.0"
prost = "0.12.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[build-dependencies]
prost-build = "0.12.3"
pbjson-build = "0.6.2"
